[package]
name = "libp2p-playground"
version = "0.1.0"
authors = ["Honghao Li <im.lihh@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo"
path = "src/echo.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "kv"
path = "src/kv.rs"

[dependencies]
libp2p = { version = "0.30", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["full"] }
mini-redis = "0.3"
bytes = "0.6"
once_cell = "1.5"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
futures = "0.3"
anyhow = "1.0"
slog = "2.7"
slog-async = "2.5"
slog-term = "2.6"
async-raft = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"